2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-selector.c (hildon_date_selector_construct_ui),
	(hildon_date_selector_constructor): Do not select the current
	date until we are handle the "changed" signal, to avoid having bogus
	elements in the days model.

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-date-selector.c (_update_day_model): Use a gint variable
	for num_days, since _month_days() can return a negative value.

2009-02-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-caption.c (hildon_caption_size_allocate):
	* src/hildon-pannable-area.c (hildon_pannable_area_size_request):
	* src/hildon-range-editor.c (hildon_range_editor_size_allocate):

	Initialize allocation variables to 0, to avoid eventually using
	unitialized variables.

2009-02-12  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-bread-crumb-trail.c
	(hildon_bread_crumb_trail_size_allocate):
	* src/hildon-calendar.c (hildon_calendar_set_background):
	* src/hildon-caption.c (hildon_caption_hierarchy_changed):
	* src/hildon-range-editor.c (hildon_range_editor_get_range):
	* src/hildon-seekbar.c (hildon_seekbar_init):
	* src/hildon-time-editor.c (hildon_time_editor_get_time):
	* src/hildon-time-selector.c (hildon_time_selector_finalize):
	* src/hildon-touch-selector-entry.c
	(hildon_touch_selector_get_text_from_model):
	* src/hildon-touch-selector.c (hildon_touch_selector_class_init):
	* src/hildon-window.c (hildon_window_finalize):

	Remove many unused variables.

2009-02-12  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-seekbar.c: (hildon_seekbar_init),
	(hildon_seekbar_size_request), (hildon_seekbar_size_allocate):

	Remove unnecessary g_assert() calls.

2009-02-12  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-caption.c: (hildon_caption_expose),
	(hildon_caption_set_property), (hildon_caption_init),
	(hildon_caption_set_focus), (hildon_caption_hierarchy_changed),